--- a/css/goods_list.less
+++ b/css/goods_list.less
@@ -114,9 +114,15 @@
         }
     }
 
+    .clear-fix::after {
+        content: ".";
+        display: block;
+        height: 0;
+        clear: both;
+        visibility: hidden;
+    }
     .content {
         width: 1228px;
-        min-height: 340px;
         margin: 0 auto;
 
         .goods {
