--- a/css/style.css
+++ b/css/style.css
@@ -192,9 +192,15 @@ a {
 .goods-list .screen .price .button-input {
   cursor: pointer;
 }
+.goods-list .clear-fix::after {
+  content: ".";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+}
 .goods-list .content {
   width: 1228px;
-  min-height: 340px;
   margin: 0 auto;
 }
 .goods-list .content .goods {
@@ -876,4 +882,21 @@ a {
   text-align: center;
   line-height: 40px;
   cursor: pointer;
+}
+.bottom {
+  width: 100%;
+  height: 50px;
+  border-top: 1px solid #e5e5e5;
+  background-color: #f4f4f4;
+  margin-top: 200px;
+  position: fixed;
+  bottom: 0px;
+  left: 0px;
+}
+.bottom .bcontent {
+  width: 400px;
+  height: 50px;
+  margin: auto;
+  line-height: 50px;
+  color: #666;
 }
